--- a/2d_block/2d_block.cfg
+++ b/2d_block/2d_block.cfg
@@ -7,17 +7,17 @@ template = tpf_vs_pft
 simulators = tdycore,pflotran
 
 [wy_vs_pft]
-title = Wy vs PFLOTRAN
+title = WY vs PFLOTRAN
 template = wy_vs_pft
 simulators = tdycore,pflotran
 
 [wy_vs_tpf]
-title = Wy vs TPF
+title = WY vs TPF
 template = wy_vs_tpf
 simulators = tdycore:tdycore_wy,tdycore:tdycore_tpf
 
 [wy_vs_mpf]
-title = Wy vs MPF
+title = WY vs MPF
 template = wy_vs_mpf
 simulators = tdycore:tdycore_wy,tdycore:tdycore_mpf
 
